Enable google oauth2

--- a/app/components/App/app.css
+++ b/app/components/App/app.css
@@ -6,3 +6,21 @@
     color: #d0021b;
     font-weight: bold;
 }
+
+a[disabled] {
+    pointer-events: none;
+}
+
+.ui.cards > .card {
+    width: 320px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+#item-cards-container .ui.cards > .card > .content > .header:not(.ui) {
+    font-size: 1.1em;
+}
+
+#item-cards-container .ui.cards > .card > .content {
+    border: none;
+}
