--- a/server/views/index.server.view.html
+++ b/server/views/index.server.view.html
@@ -2,4 +2,5 @@
 
 {{#contentFor "content"}}
     <div id="app"></div>
+    <div id="loader" class="ui active centered inline loader text">Loading...</div>
 {{/contentFor}}
