--- a/app/components/App/app.css
+++ b/app/components/App/app.css
@@ -25,6 +25,10 @@ a[disabled] {
     border: none;
 }
 
+#loader {
+    display: none;
+}
+
 .ui.loader {
     top: 50% !important;
     left: 50% !important;
