--- a/server/views/layout.server.view.html
+++ b/server/views/layout.server.view.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="{{description}}">
+    <link rel="shortcut icon" href="images/favicon.png">
 
     {{#each cssFiles}}<link rel="stylesheet" href="/{{this}}">{{/each}}
 </head>
