--- a/server/views/index.server.view.html
+++ b/server/views/index.server.view.html
@@ -2,5 +2,16 @@
 
 {{#contentFor "content"}}
     <div id="app"></div>
-    <div id="loader" class="ui active centered inline loader text">Loading...</div>
+    <div id="loader" class="ui active page dimmer">
+        <div class="content">
+            <div class="center">
+                <div class="ui large text loader">
+                    <div class="ui inverted teal header">
+                        Loading...
+                        <div class="sub header">Please wait!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {{/contentFor}}
