--- a/app/components/App/app.css
+++ b/app/components/App/app.css
@@ -13,16 +13,12 @@ a[disabled] {
 
 .ui.cards > .card {
     margin-bottom: 20px;
-    margin-right: 25px;
-}
-
-#item-cards-container .ui.cards > .card {
-    width: 320px;
+    margin-right: 11px;
 }
 
 #item-cards-container .ui.cards > .card > .content > .header:not(.ui),
 #category-cards-container .ui.cards > .card > .content > .header:not(.ui) {
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 #item-cards-container .ui.cards > .card > .content,
@@ -32,4 +28,10 @@ a[disabled] {
 
 #loader {
     display: none;
+}
+
+@media only screen and (min-width: 1200px) {
+    .ui.container {
+        width: 1220px;
+    }
 }
