--- a/app/core/app.css
+++ b/app/core/app.css
@@ -30,3 +30,38 @@ a[disabled] {
 #loader {
     display: none;
 }
+
+@media only screen and (max-width: 1024px) {
+    .ui.left.rail {
+        left: 0;
+        width: 100%;
+        padding-right: 0;
+        position: relative;
+        margin-bottom: 10px;
+    }
+
+    .image-wrapper {
+        width: 70%;
+        margin: auto !important;
+    }
+}
+
+@media only screen and (max-width: 786px) {
+    .ui.left.rail {
+        left: 0;
+        width: 100%;
+        padding-right: 0;
+        position: relative;
+        margin-bottom: 10px !important;
+    }
+
+    .image-wrapper {
+        width: 70%;
+        margin: auto !important;
+    }
+}
+
+.segment {
+    border: none !important;
+    box-shadow: none !important;
+}
