--- a/src/modules/core/client/app.component.css
+++ b/src/modules/core/client/app.component.css
@@ -48,7 +48,9 @@ a[disabled] {
     margin: auto !important;
 }
 
-.grecaptcha-badge { visibility: hidden; }
+.grecaptcha-badge {
+    visibility: hidden;
+}
 
 .site-content {
     flex: 1;
